# hacktj2026

./: .gitignore  App.entitlements  FRONTEND-PLAN.md  Package.swift  README.md  TECH-REFERENCE.md
ml/: .gitignore  README.md  pyproject.toml
ml/closed_set/configs/: baseline.yaml
ml/closed_set/eval/: evaluate.py
ml/closed_set/export/: export_coreml.py
ml/closed_set/training/: train.py
ml/datasets/labeling-guide/: README.md
ml/datasets/manifests/: closed-set-labels.yaml  dataset-splits.example.yaml  private-dataset-collection-plan.yaml  public-dataset-acquisition.yaml
ml/datasets/records/: README.md  detection-annotations.template.jsonl  frame-records.template.jsonl
ml/datasets/schemas/: detection-annotation.schema.json  detection-result.schema.json  frame-record.schema.json  hidden-hypothesis-result.schema.json  hidden-target-example.schema.json  model-manifest.schema.json  open-vocab-result.schema.json
ml/datasets/tools/: download_coco_2017.py  download_open_images_bootstrap.py  download_utils.py  validate_closed_set_dataset.py
ml/hidden_inference/: __init__.py
ml/hidden_inference/eval/: evaluate_hidden.py
ml/hidden_inference/features/: __init__.py  build_features.py
ml/hidden_inference/rules/: __init__.py  rank.py
ml/hidden_inference/training/: train_ranker.py
ml/open_vocab/: __init__.py  backproject.py  fusion.py
ml/open_vocab/eval/: evaluate_open_vocab.py
ml/open_vocab/gemini/: run_gemini.py
ml/open_vocab/grounding_dino/: __init__.py  run_grounding.py
ml/reconstruction/: __init__.py
ml/serving/: __init__.py
ml/serving/api/: __init__.py  (+1 more)
ml/tests/: test_api_contracts.py  test_chat_service.py  test_dense_dataset_export.py  test_fast_preview_export.py  test_frame_bundle_endpoints.py  test_frame_bundle_storage.py  test_gemini_provider.py  test_grounding_dino_small_object_helpers.py  test_home_store.py  test_open_vocab_fusion.py  test_open_vocab_runtime_settings.py  test_planner.py  test_query_engine.py  test_reconstruction_pipeline.py  test_room_store.py  test_route_planner.py  test_scan_live_detect.py  test_semantic_scene.py  test_toolkit_open_vocab_helpers.py  test_wearable_api.py
(+228 files in other folders)
